javascript WORKING thank god

--- a/index.html
+++ b/index.html
@@ -9,9 +9,21 @@
 </head>
 <body>
     <div id='b'>
-        <button id='play'>Play</button>
+        <button id='rock'>Rock</button>
+        <button id='paper'>Paper</button>
+        <button id='scissors'>Scissors</button>
     </div>
-
+    <div id='scores'>
+        <div id='player-score'>
+            <h2>Player Score</h3>
+            <p id='results'>0</p>
+        </div>
+        <div id='computer-score'>
+            <h2>Computer Score</h2>
+            <p id='computer-results'>0</p>
+        </div>
+    </div>
+    
     <script src='script.js'></script>
 </body>
 </html>
