added reset and new game buttons, aligned some items

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Rocks, Paper, Scissors</title>
 </head>
 <body>
+    <h1 style='text-align: center; font-weight: bold;'>Rocks, Paper, Scissors</h1>
     <div id='b'>
         <button id='rock'>Rock</button>
         <button id='paper'>Paper</button>
@@ -18,10 +19,18 @@
             <h2>Player Score</h3>
             <p id='results'>0</p>
         </div>
+        <div id='output'>
+            <h4>--</h4>
+        </div>
         <div id='computer-score'>
             <h2>Computer Score</h2>
             <p id='computer-results'>0</p>
         </div>
+    </div>
+
+    <div style='text-align: center;'>
+        <button id='new-game'>New Game</button>
+        <button id='reset'>Reset</button>
     </div>
     
     <script src='script.js'></script>
