--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
     <div id='scores'>
         <div id='player-score'>
             <h2>Player Score</h3>
-            <p id='results'>0</p>
+            <p id='results' style='font-size: 36px; margin-top: 10px; margin-bottom: 10px;'>0</p>
         </div>
-        <div id='output'>
+        <div id='output' style='font-size: 20px;'>
             <h4>--</h4>
         </div>
         <div id='computer-score'>
             <h2>Computer Score</h2>
-            <p id='computer-results'>0</p>
+            <p id='computer-results' style='font-size: 36px; margin-top: 10px; margin-bottom: 10px;'>0</p>
         </div>
     </div>
 
